--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "request": "^2.40.0",
     "socket.io": "~1.0.6",
     "socketio-jwt": "^2.0.2",
-    "static-favicon": "~1.0.1"
+    "static-favicon": "~1.0.1",
+    "memcached": "~2.0.0"
   },
   "devDependencies": {
     "grunt": "~0.4.4",
