--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
     "d3": "~3.4.11",
     "angular-slick-carousel": "~1.0.1",
     "angular-touch": "~1.2.22",
-    "ng-table": "~0.3.3"
+    "ng-table": "~0.3.3",
+    "angular-diff": "~1.0.0"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
