--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
     "angular-slick-carousel": "~1.0.1",
     "angular-touch": "~1.2.22",
     "ng-table": "~0.3.3",
-    "angular-diff": "~1.0.0"
+    "angular-diff": "~1.0.0",
+    "ng-idle": "~0.3.5"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
