--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ public
 .idea
 client/bower_components
 dist
-/server/config/local.env.js
+server/config/local.env.js
 *.sublime*
 temp
+client/assets/images/iconset_original
