--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "request": "^2.40.0",
     "socket.io": "~1.0.6",
     "socketio-jwt": "^2.0.2",
-    "static-favicon": "~1.0.1"
+    "static-favicon": "~1.0.1",
+    "tunnel-ssh": "0.0.5"
   },
   "devDependencies": {
     "grunt": "~0.4.4",
