populate disease view with real data

--- a/client/assets/data/rotationGoalsDisease.json
+++ b/client/assets/data/rotationGoalsDisease.json
@@ -19,20 +19,19 @@
 ],
 
 "GI/GU": [
-    {"disease": "Post-surgical leak", "goal_number": 2, "user_number": 0},
+    {"disease": "Post-surgical leak GI", "goal_number": 2, "user_number": 0},
     {"disease": "Reflux", "goal_number": 5, "user_number": 0},
     {"disease": "Hiatal hernia", "goal_number": 5, "user_number": 0},
     {"disease": "Dysmotility", "goal_number": 5, "user_number": 0},
-    {"disease": "Penetration/Aspiration", "goal_number": 5, "user_number": 0},
+    {"disease": "Penetration or Aspiration", "goal_number": 5, "user_number": 0},
     {"disease": "Esophageal obstruction (partial)", "goal_number": 2, "user_number": 0},
     {"disease": "Bladder leak", "goal_number": 2, "user_number": 0},
     {"disease": "Uterine anomalies", "goal_number": 1, "user_number": 0},
-    {"disease": "Blocked/absent fallopian tube", "goal_number": 1, "user_number": 0},
+    {"disease": "Blocked or absent fallopian tube", "goal_number": 1, "user_number": 0},
     {"disease": "SBO", "goal_number": 5, "user_number": 0},
     {"disease": "Ileus", "goal_number": 5, "user_number": 0},
     {"disease": "Pneumoperitoneum", "goal_number": 3, "user_number": 0},
-    {"disease": "Gallstone/Kidney stone", "goal_number": 3, "user_number": 0},
-    {"disease": "Enteric tube position", "goal_number": 5, "user_number": 0},
+    {"disease": "Gallstone or Kidney stone", "goal_number": 3, "user_number": 0},
     {"disease": "Foreign body", "goal_number": 1, "user_number": 0}
 ],
 
@@ -45,12 +44,12 @@
     {"disease": "Liver lesions", "goal_number": 3, "user_number": 0},
     {"disease": "Carotid stenosis", "goal_number": 2, "user_number": 0},
     {"disease": "Varicocele", "goal_number": 3, "user_number": 0},
-    {"disease": "Ovarian / Testicular torsion", "goal_number": 2, "user_number": 0},
+    {"disease": "Ovarian or Testicular torsion", "goal_number": 2, "user_number": 0},
     {"disease": "Ectopic pregnancy", "goal_number": 2, "user_number": 0},
     {"disease": "Ovarian mass", "goal_number": 2, "user_number": 0},
     {"disease": "Endometrial disease", "goal_number": 2, "user_number": 0},
     {"disease": "Fibroids", "goal_number": 3, "user_number": 0},
-    {"disease": "Ascites/FAST", "goal_number": 3, "user_number": 0},
+    {"disease": "Ascites or FAST", "goal_number": 3, "user_number": 0},
     {"disease": "Transplant kidney pathology", "goal_number": 3, "user_number": 0},
     {"disease": "Aortic aneurysm", "goal_number": 2, "user_number": 0}
 ],
@@ -72,16 +71,16 @@
     {"disease": "Pneumonia", "goal_number": 10, "user_number": 0},
     {"disease": "Bronchiolitis", "goal_number": 10, "user_number": 0},
     {"disease": "Necrotizing enterocolitis", "goal_number": 5, "user_number": 0},
-    {"disease": "Hirshprung’s", "goal_number": 1, "user_number": 0},
+    {"disease": "Hirschsprung's disease", "goal_number": 1, "user_number": 0},
     {"disease": "Duodenal atresia", "goal_number": 1, "user_number": 0},
     {"disease": "Malrotation", "goal_number": 2, "user_number": 0},
     {"disease": "Midgut volvulus", "goal_number": 1, "user_number": 0},
     {"disease": "Gastroesophageal reflux", "goal_number": 5, "user_number": 0},
     {"disease": "GI obstruction", "goal_number": 5, "user_number": 0},
     {"disease": "Esophageal atresia", "goal_number": 1, "user_number": 0},
-    {"disease": "Omphalocele, Gastroschisis", "goal_number": 1, "user_number": 0},
+    {"disease": "Omphalocele or Gastroschisis", "goal_number": 1, "user_number": 0},
     {"disease": "Lines and umbilical catheters", "goal_number": 10, "user_number": 0},
-    {"disease": "Jejunal and ileal stenosis/atresia", "goal_number": 1, "user_number": 0},
+    {"disease": "Jejunal and ileal stenosis or atresia", "goal_number": 1, "user_number": 0},
     {"disease": "Pneumoperitoneum", "goal_number": 5, "user_number": 0},
     {"disease": "Hypertrophic pyloric stenosis", "goal_number": 1, "user_number": 0},
     {"disease": "Intussusception", "goal_number": 1, "user_number": 0},
@@ -90,7 +89,7 @@
     {"disease": "VP shunt pseudocyst", "goal_number": 1, "user_number": 0},
     {"disease": "Intracranial hemorrhage", "goal_number": 1, "user_number": 0},
     {"disease": "PVL", "goal_number": 1, "user_number": 0},
-    {"disease": "Hydrocephalus1each", "goal_number": 1, "user_number": 0},
+    {"disease": "Hydrocephalus", "goal_number": 1, "user_number": 0},
     {"disease": "Testicular torsion", "goal_number": 1, "user_number": 0},
     {"disease": "Hydrocele", "goal_number": 2, "user_number": 0},
     {"disease": "UPJ obstruction", "goal_number": 2, "user_number": 0},
@@ -103,8 +102,8 @@
     {"disease": "Ovarian torsion", "goal_number": 1, "user_number": 0},
     {"disease": "Pyelonephritis", "goal_number": 1, "user_number": 0},
     {"disease": "Septic arthritis", "goal_number": 1, "user_number": 0},
-    {"disease": "Childhood fractures (Salter-Harris, torus)", "goal_number": 5, "user_number": 0},
-    {"disease": "Child abuse / Non-accidental trauma", "goal_number": 1, "user_number": 0},
+    {"disease": "Childhood fractures (Salter-Harris or torus)", "goal_number": 5, "user_number": 0},
+    {"disease": "Child abuse or Non-accidental trauma", "goal_number": 1, "user_number": 0},
     {"disease": "Developmental dysplasia of the hip", "goal_number": 1, "user_number": 0},
     {"disease": "SCFE", "goal_number": 1, "user_number": 0},
     {"disease": "Lymphadenitis", "goal_number": 1, "user_number": 0},
@@ -123,7 +122,7 @@
     {"disease": "Neuroblastoma", "goal_number": 1, "user_number": 0},
     {"disease": "Hepatoblastoma", "goal_number": 1, "user_number": 0},
     {"disease": "Rhabdomyosarcoma", "goal_number": 1, "user_number": 0},
-    {"disease": "Lymphoma/leukemia", "goal_number": 2, "user_number": 0},
+    {"disease": "Lymphoma or Leukemia", "goal_number": 2, "user_number": 0},
     {"disease": "Testicular neoplasms", "goal_number": 1, "user_number": 0},
     {"disease": "LCH", "goal_number": 1, "user_number": 0},
     {"disease": "Skeletal dysplasias", "goal_number": 1, "user_number": 0},
@@ -152,20 +151,20 @@
 ],
 
 "ED": [
-    {"disease": "Orbital fracture / muscle entrapment", "goal_number": 3, "user_number": 0},
+    {"disease": "Orbital fracture or muscle entrapment", "goal_number": 3, "user_number": 0},
     {"disease": "Subarachnoid hemorrhage with aneurysm", "goal_number": 3, "user_number": 0},
-    {"disease": "Subdural / epidural hematoma", "goal_number": 3, "user_number": 0},
+    {"disease": "Subdural or epidural hematoma", "goal_number": 3, "user_number": 0},
     {"disease": "Cerebral infarction", "goal_number": 3, "user_number": 0},
     {"disease": "Cervical spine fracture", "goal_number": 3, "user_number": 0},
-    {"disease": "Pneumothorax w/ or w/o tension", "goal_number": 1, "user_number": 0},
+    {"disease": "Pneumothorax with or without tension", "goal_number": 1, "user_number": 0},
     {"disease": "Pulmonary embolism", "goal_number": 3, "user_number": 0},
     {"disease": "Aortic dissection", "goal_number": 2, "user_number": 0},
     {"disease": "Esophageal rupture", "goal_number": 1, "user_number": 0},
     {"disease": "Aspiration pneumonia", "goal_number": 1, "user_number": 0},
     {"disease": "Free intraperitoneal air", "goal_number": 2, "user_number": 0},
     {"disease": "Solid organ injury", "goal_number": 2, "user_number": 0},
-    {"disease": "Small bowel obstruction - closed loop/ ischemia", "goal_number": 3, "user_number": 0},
-    {"disease": "Diverticulitis / abscess", "goal_number": 3, "user_number": 0},
+    {"disease": "Small bowel obstruction - closed loop or ischemia", "goal_number": 3, "user_number": 0},
+    {"disease": "Diverticulitis or abscess", "goal_number": 3, "user_number": 0},
     {"disease": "Acute appendicitis", "goal_number": 3, "user_number": 0},
     {"disease": "Acute cholecystitis", "goal_number": 2, "user_number": 0},
     {"disease": "Ectopic pregnancy", "goal_number": 2, "user_number": 0},
@@ -204,15 +203,15 @@
     {"disease": "Sarcoid", "goal_number": 2, "user_number": 0},
     {"disease": "Mesothelioma", "goal_number": 1, "user_number": 0},
     {"disease": "Benign fibrous tumor of the pleura", "goal_number": 1, "user_number": 0},
-    {"disease": "Lung cancer, primary or metastatic", "goal_number": 3, "user_number": 0},
+    {"disease": "Lung cancer primary or metastatic", "goal_number": 3, "user_number": 0},
     {"disease": "Lymphoma", "goal_number": 2, "user_number": 0},
     {"disease": "PCP", "goal_number": 2, "user_number": 0},
     {"disease": "Pulmonary embolism", "goal_number": 4, "user_number": 0},
     {"disease": "Thymoma", "goal_number": 1, "user_number": 0},
-    {"disease": "Thyroid goiter/cancer", "goal_number": 1, "user_number": 0},
+    {"disease": "Thyroid goiter or cancer", "goal_number": 1, "user_number": 0},
     {"disease": "Pneumothorax", "goal_number": 3, "user_number": 0},
     {"disease": "Pulmonary edema", "goal_number": 4, "user_number": 0},
-    {"disease": "Pneumonia, all", "goal_number": 4, "user_number": 0},
+    {"disease": "Pneumonia", "goal_number": 4, "user_number": 0},
     {"disease": "Intersitial lung disease", "goal_number": 3, "user_number": 0},
     {"disease": "Septic emboli", "goal_number": 2, "user_number": 0},
     {"disease": "Silicosis", "goal_number": 1, "user_number": 0},
@@ -220,7 +219,7 @@
     {"disease": "Diffuse alveolar hemorrhage", "goal_number": 2, "user_number": 0},
     {"disease": "Pulmonary alveolar proteinosis", "goal_number": 1, "user_number": 0},
     {"disease": "Tuberculosis", "goal_number": 3, "user_number": 0},
-    {"disease": "Lymphangiomyomatosis", "goal_number": 1, "user_number": 0},
+    {"disease": "Lymphangioleiomyomatosis", "goal_number": 1, "user_number": 0},
     {"disease": "Pulmonary sequestration", "goal_number": 1, "user_number": 0}
 ]
 
