--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "connect-mongo": "^0.4.1",
     "cookie-parser": "~1.0.1",
     "cookie-session": "^1.0.2",
+    "cron": "^1.0.5",
     "ejs": "~0.8.4",
     "errorhandler": "~1.0.0",
     "express": "~4.0.0",
